Add code to generate generic summary for any dataset

--- a/Visualization/wheat_seed.ipynb
+++ b/Visualization/wheat_seed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "Text(0, 0.5, 'Perimeter')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "Text(0, 0.5, 'Kernel.Width')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -384,7 +384,7 @@
        "Text(0, 0.5, 'Compactness')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "Text(0.5, 1.0, 'Predicted')"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -515,16 +515,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcffc920eb8>"
+       "<matplotlib.legend.Legend at 0x7f0351fb09b0>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
        "Text(0.5, 1.0, 'Predicted')"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -605,16 +605,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcffc6cd908>"
+       "<matplotlib.legend.Legend at 0x7f03542502e8>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "Text(0.5, 1.0, 'Predicted')"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -695,16 +695,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcffc5d4c88>"
+       "<matplotlib.legend.Legend at 0x7f0351e28978>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
        "        4.73304167,  5.09663889])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1092,13 +1092,13 @@
       "The cluster 3 centre are found to be [14.65731343 14.47283582  0.87820299  5.57362687  3.27565672  2.66252537\n",
       "  5.19283582]\n",
       "For cluster 1, maximum datapoint distance is 3.8143674445694598\n",
-      "For cluster 1, maximum datapoint distance is 0.2515151088287457\n",
+      "For cluster 1, minimum datapoint distance is 0.2515151088287457\n",
       "For cluster 1, variance is 0.515203164441043\n",
       "For cluster 2, maximum datapoint distance is 3.4381895247228407\n",
-      "For cluster 2, maximum datapoint distance is 0.216254495707924\n",
+      "For cluster 2, minimum datapoint distance is 0.216254495707924\n",
       "For cluster 2, variance is 0.5851616732317656\n",
       "For cluster 3, maximum datapoint distance is 3.1840272408261536\n",
-      "For cluster 3, maximum datapoint distance is 0.17121919536174962\n",
+      "For cluster 3, minimum datapoint distance is 0.17121919536174962\n",
       "For cluster 3, variance is 0.5513951592094533\n",
       "The labels for each of them are [2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 0 2 2 0 2 2 2 2 2 2 0 2 2 2 2 2 2 2 2 2 1 2\n",
       " 0 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 0 0 0 2 2 2 2 0 1 1 1 1 1 1 1 1\n",
@@ -1124,7 +1124,7 @@
     "    min_generic = max_min_arr[i][0]\n",
     "    var_generic = var_arr[i]\n",
     "    print(f\"For cluster {i+1}, maximum datapoint distance is {max_generic}\")\n",
-    "    print(f\"For cluster {i+1}, maximum datapoint distance is {min_generic}\")\n",
+    "    print(f\"For cluster {i+1}, minimum datapoint distance is {min_generic}\")\n",
     "    print(f\"For cluster {i+1}, variance is {var_generic}\")\n",
     "\n",
     "print(\"The labels for each of them are {lab} \".format(lab=lab))\n",
