Add installation instructions and add pip3 requirements

--- a/Visualization/wheat_seed.ipynb
+++ b/Visualization/wheat_seed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,24 +215,13 @@
       "\n",
       "[199 rows x 1 columns]\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n",
-      "  after removing the cwd from sys.path.\n",
-      "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:5: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n",
-      "  \"\"\"\n"
-     ]
     }
    ],
    "source": [
-    "samples = pd.read_csv('wheatseed.csv')\n",
-    "X_df = pd.read_csv('wheatseed.csv', usecols=[\"Area\", \"Perimeter\", \"Compactness\", \"Kernel.Length\", \"Kernel.Width\", \"Asymmetry.Coeff\", \"Kernel.Groove\"])\n",
-    "y_df = pd.read_csv('wheatseed.csv', usecols=[\"Type\"])\n",
-    "X = np.array(X_df.as_matrix())\n",
-    "y = np.squeeze(np.array(y_df.as_matrix()))\n",
+    "X_df = pd.read_csv('../data/wheatseed.csv', usecols=[\"Area\", \"Perimeter\", \"Compactness\", \"Kernel.Length\", \"Kernel.Width\", \"Asymmetry.Coeff\", \"Kernel.Groove\"])\n",
+    "y_df = pd.read_csv('../data/wheatseed.csv', usecols=[\"Type\"])\n",
+    "X = np.array(X_df.to_numpy())\n",
+    "y = np.squeeze(np.array(y_df.to_numpy()))\n",
     "print(X_df)\n",
     "print(y_df)"
    ]
